--- a/packages/ckeditor5-emoji/theme/emojitone.css
+++ b/packages/ckeditor5-emoji/theme/emojitone.css
@@ -3,7 +3,7 @@
  * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-licensing-options
  */
 
-.ck.ck-emoji-tone {
+.ck.ck-emoji__skin-tone {
 	margin-left: var(--ck-spacing-standard);
 
 	> .ck.ck-dropdown {
