Replace on tables inline styles responsible for floating into CSS classes.

--- a/packages/ckeditor5-list/theme/list.css
+++ b/packages/ckeditor5-list/theme/list.css
@@ -39,27 +39,17 @@
 	}
 }
 
-/* When an element (e.g. table) has `style` tag contains `float` `left`/`right` and has a list as a sibling,
-add margin to the end of the element.
-See https://github.com/ckeditor/ckeditor5/issues/8412 */
-[dir="ltr"] [style*="float:left"]:has( ~ul ),
-[dir="ltr"] [style*="float:left"]:has( ~ol ),
-[dir="rtl"] [style*="float:right"]:has( ~ul ),
-[dir="rtl"] [style*="float:right"]:has( ~ol ) {
-	margin-inline-end: 2em;
-}
-
 /* Add `overflow: hidden` and `padding-inline-start` to the lists, starting from the second nesting
-only when they are preceded by an element (e.g. table) has `style` tag contains `float` `left`/`right`.
+only when they are preceded by an element (e.g. table) has `class` name `table-style-align-right` or `table-style-align-left`.
 See https://github.com/ckeditor/ckeditor5/issues/8412 */
-[dir="rtl"] [style*="float:right"] ~ ul ul,
-[dir="rtl"] [style*="float:right"] ~ ul ol,
-[dir="rtl"] [style*="float:right"] ~ ol ol,
-[dir="rtl"] [style*="float:right"] ~ ol ul,
-[dir="ltr"] [style*="float:left"] ~ ul ul,
-[dir="ltr"] [style*="float:left"] ~ ul ol,
-[dir="ltr"] [style*="float:left"] ~ ol ol,
-[dir="ltr"] [style*="float:left"] ~ ol ul {
+.ck-content .table-style-align-right ~ ul ul,
+.ck-content .table-style-align-right ~ ul ol,
+.ck-content .table-style-align-right ~ ol ol,
+.ck-content .table-style-align-right ~ ol ul,
+.ck-content .table-style-align-left ~ ul ul,
+.ck-content .table-style-align-left ~ ul ol,
+.ck-content .table-style-align-left ~ ol ol,
+.ck-content .table-style-align-left ~ ol ul {
 	overflow: hidden;
 	padding-inline-start: 2em;
 }
