--- a/packages/ckeditor5-full-screen/theme/fullscreen.css
+++ b/packages/ckeditor5-full-screen/theme/fullscreen.css
@@ -2,3 +2,57 @@
  * Copyright (c) 2003-2025, CKSource Holding sp. z o.o. All rights reserved.
  * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-licensing-options
  */
+
+.ck-full-screen-container {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 10000;
+	background: var(--ck-color-base-foreground);
+}
+
+.ck-full-screen__main-container {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.ck-full-screen__menu-bar .ck.ck-menu-bar {
+	border: none;
+}
+
+.ck-full-screen-container .ck-full-screen__editor-wrapper {
+	display: flex;
+	justify-content: center;
+	overflow: auto;
+	max-height: 100%;
+}
+
+.ck-full-screen-container .ck-full-screen__sidebar {
+	width: 270px;
+	margin-top: 28px;
+	margin-left: 10px;
+	margin-right: 10px;
+	background-color: hsl(34.29, 77.78%, 91.18%);
+	flex-shrink: 0;
+}
+
+.ck-full-screen-container .ck-full-screen__editor {
+	margin-top: 28px;
+	margin-bottom: 56px;
+	height: 100%;
+}
+
+.ck-full-screen-container .ck-full-screen__editor .ck.ck-editor__editable:not(.ck-editor__nested-editable) {
+	box-sizing: border-box;
+	min-width: calc(210mm + 2px);
+	max-width: calc(210mm + 2px);
+	min-height: 297mm;
+	height: fit-content;
+	padding: 20mm 12mm;
+	border: 1px hsl(0, 0%, 82.7%) solid;
+	background: hsl(0, 0%, 100%);
+	box-shadow: 0 2px 3px hsla(0, 0%, 0%, 0.078);
+}
