--- a/packages/ckeditor5-emoji/theme/emojicategories.css
+++ b/packages/ckeditor5-emoji/theme/emojicategories.css
@@ -3,7 +3,7 @@
  * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-licensing-options
  */
 
-.ck.ck-emoji__categories {
+.ck.ck-emoji__categories-list {
 	display: flex;
 	justify-content: space-between;
 	margin: 0 var(--ck-spacing-large);
@@ -13,14 +13,12 @@
 		border-bottom-width: 2px;
 		border-bottom-style: solid;
 		border-bottom-color: transparent;
-
 		padding: 0;
-
 		font-size: var(--ck-font-size-big);
 		min-width: var(--ck-font-size-big);
 		min-height: var(--ck-font-size-big);
 
-		&.ck-emoji__category-item_active {
+		&.ck-emoji__category-item.ck-on {
 			border-bottom-color: var(--ck-color-base-active);
 		}
 
