Use form view with header in emoji balloon.

--- a/packages/ckeditor5-emoji/theme/emojipicker.css
+++ b/packages/ckeditor5-emoji/theme/emojipicker.css
@@ -13,6 +13,10 @@
 	padding-bottom: var(--ck-spacing-medium);
 	justify-content: space-between;
 	align-items: center;
+
+	& > .ck.ck-search {
+		flex: 1;
+	}
 }
 
 /*
