--- a/packages/ckeditor5-emoji/theme/emojipickerform.css
+++ b/packages/ckeditor5-emoji/theme/emojipickerform.css
@@ -11,10 +11,7 @@
 	 * The border is not needed in the emoji picker form so try to remove it keeping
 	 * specificity high enough to override the form styling.
 	 */
-	& .ck-dropdown .ck-dropdown__button {
-		&:not(:focus),
-		&:focus {
-			border: none;
-		}
+	& .ck-dropdown .ck-dropdown__button:not(:focus) {
+		border-color: transparent;
 	}
 }
