--- a/packages/ckeditor5-table/theme/tablelayout.css
+++ b/packages/ckeditor5-table/theme/tablelayout.css
@@ -7,6 +7,7 @@
 	--ck-table-layout-widget-type-around-button-size: 16px;
 	--ck-table-layout-widget-type-around-icon-width: 10px;
 	--ck-table-layout-widget-type-around-icon-height: 8px;
+	--ck-table-layout-default-border-color: hsl(0, 0%, 58%);
 }
 
 .ck-editor__editable .table.layout-table {
@@ -14,6 +15,22 @@
 
 	& table td,
 	& table th {
+		padding: 2px;
+	}
+
+	/* Removed default background color from focused table cell */
+	& > table  > tbody > tr > td {
+		--ck-color-selector-focused-cell-background: transparent;
+	}
+
+	/* Default table layout stylization in editing view. */
+	/* When border is not set: */
+	& > table:not([style*="border"]),
+	& > table td:not([style*="border"]),
+	& > table th:not([style*="border"]) {
+		border: none;
+		outline: var(--ck-table-layout-default-border-color) 1px dashed;
+		outline-offset: -0.5px;
 		padding: 2px;
 	}
 
@@ -68,7 +85,6 @@
 		}
 	}
 }
-
 
 .ck-content {
 	& .table.layout-table {
