Integrate fullscreen mode with pagination.

--- a/packages/ckeditor5-fullscreen/theme/fullscreen.css
+++ b/packages/ckeditor5-fullscreen/theme/fullscreen.css
@@ -9,6 +9,12 @@ body.ck-fullscreen {
 	--ck-z-default: calc(var(--ck-z-fullscreen) + 1);
 	--ck-z-panel: calc(var(--ck-z-default) + 999);
 	--ck-z-dialog: 100000;
+
+	overflow: hidden;
+
+	& .ck-pagination-view-line {
+		z-index: calc(var(--ck-z-fullscreen) + 1);
+	}
 }
 
 /*
