--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-widget/widget.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-widget/widget.css
@@ -140,6 +140,7 @@
 	/* Hide the selection handler on mouse hover over the widget of all the widget parents. */
 	&:has( .ck-widget:hover ) > .ck-widget__selection-handle {
 		opacity: 0;
+		visibility: hidden;
 	}
 }
 
