Add text overflow ellipsis to link providers form header and items.

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linkprovideritems.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linkprovideritems.css
@@ -20,6 +20,12 @@
 .ck.ck-link-providers {
 	width: var(--ck-link-providers-width);
 
+	& .ck-form__header__label {
+		overflow: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+	}
+
 	& > .ck-link-providers__list {
 		max-height: min( var(--ck-link-list-view-max-height), 40vh );
 
