--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linkform.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linkform.css
@@ -48,6 +48,12 @@
 		& .ck-link__button {
 			padding: var(--ck-spacing-small) var(--ck-spacing-large);
 			border-radius: 0;
+
+			& > .ck-button__label {
+				overflow: hidden;
+				text-overflow: ellipsis;
+				white-space: nowrap;
+			}
 		}
 	}
 }
