Table layot fix.

--- a/packages/ckeditor5-table/theme/tablelayout.css
+++ b/packages/ckeditor5-table/theme/tablelayout.css
@@ -39,7 +39,7 @@
 }
 
 .ck-content {
-	& .table.layout-table {
+	& .table.layout-table:not(figure) {
 		/* Table layout set to fixed only when width is set. But we need to filter other possibilities `*-width`, */
 		&[style^="width:"],
 		&[style*=" width:"],
