Bound css class to a variable.

--- a/packages/ckeditor5-emoji/theme/emojipicker.css
+++ b/packages/ckeditor5-emoji/theme/emojipicker.css
@@ -32,6 +32,6 @@
 }
 
 /* See: https://github.com/ckeditor/ckeditor5/issues/17964 */
-div.ck.ck-balloon-panel:has( .ck.ck-emoji ) {
+.ck-emoji__panel_open {
 	z-index: calc( var( --ck-z-dialog ) + 1 );
 }
