Fix the intendation.

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
@@ -51,8 +51,7 @@
 			[style*="border-right"],
 			[style*="border-width"],
 			[style*="border-style"],
-			[style*="border-color"]
-		) {
+			[style*="border-color"]) {
 			border-color: transparent;
 			outline: var(--ck-table-layout-default-border-color) 1px dashed;
 		}
