--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
@@ -22,7 +22,8 @@
 		/* Removed default background color from focused table cell */
 		& > table > tbody > tr > td {
 			--ck-color-selector-focused-cell-background: transparent;
-			padding: 1px 2px;
+			box-shadow: none;
+			padding: 0px 2px;
 
 			&[style^="width:"],
 			&[style*=" width:"],
@@ -53,7 +54,12 @@
 			[style*="border-style"],
 			[style*="border-color"]) {
 			border-color: transparent;
+			border-width: 0;
 			outline: var(--ck-table-layout-default-border-color) 1px dashed;
+
+			&:focus {
+				outline: var(--ck-color-focus-border) 1px solid;
+			}
 		}
 
 		/* Widget type around overrides. */
