Simplify CSS selector.

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-table/tablelayout.css
@@ -35,16 +35,9 @@
 
 		/* Default table layout stylization in editing view when border is not set.
 		But it need to be more strict cause of style attributes like `border-collapse`, `border-spacing`, etc. */
-		& > table:not(
-		[style*="border:"],
-		[style*="border-top"],
-		[style*="border-bottom"],
-		[style*="border-left"],
-		[style*="border-right"],
-		[style*="border-width"],
-		[style*="border-style"],
-		[style*="border-color"]),
-		& > table > tbody > tr > td:not(
+		& > table,
+		& > table > tbody > tr > td {
+			&:not(
 			[style*="border:"],
 			[style*="border-top"],
 			[style*="border-bottom"],
@@ -53,12 +46,13 @@
 			[style*="border-width"],
 			[style*="border-style"],
 			[style*="border-color"]) {
-			border-color: transparent;
-			border-width: 0;
-			outline: var(--ck-table-layout-default-border-color) 1px dashed;
+				border-color: transparent;
+				border-width: 0;
+				outline: var(--ck-table-layout-default-border-color) 1px dashed;
 
-			&:focus {
-				outline: var(--ck-color-focus-border) 1px solid;
+				&:focus {
+					outline: var(--ck-color-focus-border) 1px solid;
+				}
 			}
 		}
 
