Added missing CSS import.

--- a/packages/ckeditor5-theme-lark/theme/index.css
+++ b/packages/ckeditor5-theme-lark/theme/index.css
@@ -99,6 +99,7 @@
 @import "./ckeditor5-table/tableform.css";
 @import "./ckeditor5-table/tableproperties.css";
 @import "./ckeditor5-table/tableselection.css";
+@import "./ckeditor5-table/tablelayout.css";
 @import "./ckeditor5-widget/widget.css";
 @import "./ckeditor5-widget/widgetresize.css";
 @import "./ckeditor5-widget/widgettypearound.css";
